--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 build-XdfStreamer-Desktop_Qt_5_11_1_MSVC2015_32bit-Debug/
 build-XdfStreamer-Desktop_Qt_5_11_1_MSVC2015_32bit-Release/
+build-XdfStreamer-Desktop_Qt_5_11_1_MSVC2015_64bit-Debug/
+build-XdfStreamer-Desktop_Qt_5_11_1_MSVC2015_64bit-Release/
