--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 build-XdfStreamer*/
 XdfStreamer/XdfStreamer.pro.user
 XdfStreamer/XdfStreamer.pro.user.0340fd4
+XdfStreamer/XdfStreamer.pro.user.4.8-pre1
