gh actions - bump liblsl and libxdf versions
Also use GH action for installing Qt on MacOS because homebrew now uses Qt6 by default and cmake still has trouble with it.

--- a/.github/workflows/cppcmake.yml
+++ b/.github/workflows/cppcmake.yml
@@ -11,11 +11,11 @@ on:
 env:
   LSL_URL: 'https://github.com/sccn/liblsl/releases/download'
   LSL_RELEASE_PREFIX: 'v'
-  LSL_RELEASE: '1.14.0'
-  LSL_RELEASE_SUFFIX: 'b5'
+  LSL_RELEASE: '1.15.2'
+  LSL_RELEASE_SUFFIX: ''
   XDF_URL: 'https://github.com/xdf-modules/libxdf/releases/download'
   XDF_RELEASE_PREFIX: 'v'
-  XDF_RELEASE: '0.99.5'
+  XDF_RELEASE: '0.99.8'
   XDF_RELEASE_SUFFIX: ''
 
 jobs:
@@ -45,7 +45,7 @@ jobs:
            sudo dpkg -i liblsl.deb
            sudo apt install -y qtbase5-dev
 
-    - name: Install liblsl and libxdf (Windows)
+    - name: Install liblsl and libxdf (Windows 64)
       if: matrix.os == 'windows-latest'
       run: |
            Invoke-WebRequest -Uri $Env:LSL_URL/$Env:LSL_RELEASE_PREFIX$Env:LSL_RELEASE$Env:LSL_RELEASE_SUFFIX/liblsl-$Env:LSL_RELEASE-Win64.zip -o liblsl.7z
@@ -53,7 +53,7 @@ jobs:
            Invoke-WebRequest -Uri $Env:XDF_URL/$Env:XDF_RELEASE_PREFIX$Env:XDF_RELEASE$Env:XDF_RELEASE_SUFFIX/libxdf-$Env:XDF_RELEASE-win64.zip -o libxdf.7z
            7z x libxdf.7z -oXDF
 
-    - name: Install liblsl, libxdf, and Qt (macOS)
+    - name: Install liblsl, libxdf (MacOS)
       if: matrix.os == 'macOS-latest'
       run: |
            curl -L ${LSL_URL}/${LSL_RELEASE_PREFIX}${LSL_RELEASE}${LSL_RELEASE_SUFFIX}/liblsl-${LSL_RELEASE}-MacOS10.13.tar.bz2 -o liblsl.tar.bz2
@@ -62,14 +62,12 @@ jobs:
            curl -L ${XDF_URL}/${XDF_RELEASE_PREFIX}${XDF_RELEASE}${XDF_RELEASE_SUFFIX}/libxdf-${XDF_RELEASE}-Darwin.tar.bz2 -o libxdf.tar.bz2
            mkdir XDF
            tar -xvf libxdf.tar.bz2 -C XDF
-           brew install qt
-           echo '::set-env name=CMAKE_PREFIX_PATH::/usr/local/opt/qt'
 
-    - name: Install Qt (Windows)
-      if: matrix.os == 'windows-latest'
+    - name: Install Qt (Windows and MacOS)
+      if: matrix.os == 'windows-latest' || matrix.os == 'macOS-latest'
       uses: jurplel/install-qt-action@v2
       with:
-        version: 5.15.1
+        version: 5.15.2
 
     - name: Configure CMake
       shell: bash
