--- a/.github/workflows/cppcmake.yml
+++ b/.github/workflows/cppcmake.yml
@@ -41,14 +41,14 @@ jobs:
            echo ${{ github.ref }}
            curl -L ${XDF_URL}/${XDF_RELEASE_PREFIX}${XDF_RELEASE}${XDF_RELEASE_SUFFIX}/libxdf-${XDF_RELEASE}-Linux.deb -o libxdf.deb
            sudo dpkg -i libxdf.deb
-           curl -L ${LSL_URL}/${LSL_RELEASE_PREFIX}${LSL_RELEASE}${LSL_RELEASE_SUFFIX}/liblsl-${LSL_RELEASE}-Linux-bionic.deb -o liblsl.deb
+           curl -L ${LSL_URL}/${LSL_RELEASE_PREFIX}${LSL_RELEASE}${LSL_RELEASE_SUFFIX}/liblsl-${LSL_RELEASE}-focal_amd64.deb -o liblsl.deb
            sudo dpkg -i liblsl.deb
            sudo apt install -y qtbase5-dev
 
     - name: Install liblsl and libxdf (Windows 64)
       if: matrix.os == 'windows-latest'
       run: |
-           Invoke-WebRequest -Uri $Env:LSL_URL/$Env:LSL_RELEASE_PREFIX$Env:LSL_RELEASE$Env:LSL_RELEASE_SUFFIX/liblsl-$Env:LSL_RELEASE-Win64.zip -o liblsl.7z
+           Invoke-WebRequest -Uri $Env:LSL_URL/$Env:LSL_RELEASE_PREFIX$Env:LSL_RELEASE$Env:LSL_RELEASE_SUFFIX/liblsl-$Env:LSL_RELEASE-Win_amd64.zip -o liblsl.7z
            7z x liblsl.7z -oLSL
            Invoke-WebRequest -Uri $Env:XDF_URL/$Env:XDF_RELEASE_PREFIX$Env:XDF_RELEASE$Env:XDF_RELEASE_SUFFIX/libxdf-$Env:XDF_RELEASE-win64.zip -o libxdf.7z
            7z x libxdf.7z -oXDF
@@ -56,7 +56,7 @@ jobs:
     - name: Install liblsl, libxdf (MacOS)
       if: matrix.os == 'macOS-latest'
       run: |
-           curl -L ${LSL_URL}/${LSL_RELEASE_PREFIX}${LSL_RELEASE}${LSL_RELEASE_SUFFIX}/liblsl-${LSL_RELEASE}-MacOS10.13.tar.bz2 -o liblsl.tar.bz2
+           curl -L ${LSL_URL}/${LSL_RELEASE_PREFIX}${LSL_RELEASE}${LSL_RELEASE_SUFFIX}/liblsl-${LSL_RELEASE}-OSX_amd64.tar.bz2 -o liblsl.tar.bz2
            mkdir LSL
            tar -xvf liblsl.tar.bz2 -C LSL
            curl -L ${XDF_URL}/${XDF_RELEASE_PREFIX}${XDF_RELEASE}${XDF_RELEASE_SUFFIX}/libxdf-${XDF_RELEASE}-Darwin.tar.bz2 -o libxdf.tar.bz2
