--- a/.github/workflows/cppcmake.yml
+++ b/.github/workflows/cppcmake.yml
@@ -42,8 +42,8 @@ jobs:
            curl -L ${XDF_URL}/${XDF_RELEASE_PREFIX}${XDF_RELEASE}${XDF_RELEASE_SUFFIX}/libxdf-${XDF_RELEASE}-Linux.deb -o libxdf.deb
            sudo dpkg -i libxdf.deb
            curl -L ${LSL_URL}/${LSL_RELEASE_PREFIX}${LSL_RELEASE}${LSL_RELEASE_SUFFIX}/liblsl-${LSL_RELEASE}-focal_amd64.deb -o liblsl.deb
+           sudo apt install -y libpugixml1v5 qtbase5-dev
            sudo dpkg -i liblsl.deb
-           sudo apt install -y qtbase5-dev
 
     - name: Install liblsl and libxdf (Windows 64)
       if: matrix.os == 'windows-latest'
